# msg_database

./: .travis.yaml  README.md
msg_database_msgs/: CMakeLists.txt  package.xml
msg_database_msgs/msg/: .TypeDefinition.msg.swp  TypeDefinition.msg
msg_database_scripts/: CMakeLists.txt  package.xml  setup.py
msg_database_scripts/scripts/: .convert_msg_spec_to_json.py.swp  convert_msg_spec_to_json.py
msg_database_server/: client_apps_sync.js  hic_apps_sync.js  index.js  package.json  rapp_sync.js  routes.js  sync.js  utils.js
msg_database_server/distro/client_apps/: client_apps.yaml  delivery.client_apps  pickup_delivery.client_apps  turtlebot_pairing.client_apps  welcome.client_apps
msg_database_server/distro/hic_apps/: hic_apps.yaml
msg_database_server/distro/interactions/: admin.client_apps  admin.interactions  delivery.client_apps  delivery.interactions  indoor_2d_map_prep.client_apps  indoor_2d_map_prep.interactions  interactions.yaml  teleop.interactions  turtlebot_pairing.interactions
msg_database_server/distro/rocon_apps/: rocon_apps.yaml
msg_database_server/views/: message_type.ejs
rocon_protocols_web_fetch/: README.md  package.json
rocon_protocols_web_fetch/lib/: hic_app.js  msg.js  rocon_app.js  utils.js
rocon_protocols_web_fetch/test/: hic_app.js  msg.js  rocon_app.js  utils.js
rocon_protocols_web_fetcher/: README.md  index.js  package.json
rocon_protocols_web_fetcher/lib/: msg.js  utils.js
rocon_protocols_web_fetcher/test/: msg.js  utils.js
rocon_protocols_web_msgs/: CMakeLists.txt  package.xml
rocon_protocols_web_scripts/: CMakeLists.txt  package.xml  setup.py
rocon_protocols_web_scripts/scripts/: convert_msg_spec_to_json.py
rocon_protocols_webserver/: .gitignore  config.json.sample  hic_apps_sync.js  index.js  package.json  rapp_sync.js  routes.js  scheduler.js  sync_hic_app.js  sync_message.js  sync_rocon_app.js  utils.js  web.js
rocon_protocols_webserver/distro/hic_apps/: delivery.hic_apps  hic_apps.yaml  live_authoring.hic_apps  pickup_delivery.hic_apps  teleop.hic_apps  toyweb_training_contents.hic_apps  turtlebot_pairing.hic_apps  vm_delivery.hic_apps  (+1 more)
rocon_protocols_webserver/public/: bundle.js
rocon_protocols_webserver/views/: messages.ejs
(+3 files in other folders)
