<?xml version="1.0"?>
<package>
  <name>msg_database_msgs</name>
  <version>0.0.0</version>
  <description>The msg_database_msgs package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <author>Jihoon Lee</author>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/msg_database_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
