<?xml version="1.0"?>
<package>
  <name>msg_database_scripts</name>
  <version>0.0.0</version>
  <description>The msg_database_scripts package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <author>Jihoon Lee</author>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/msg_database_scripts</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>msg_database_msgs</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>rosmsg</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>rosmsg</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rospy_message_converter</run_depend>
</package>
